--- a/style/styles.css
+++ b/style/styles.css
@@ -49,7 +49,8 @@ body {
   padding: 5%;
 }
 #error-message {
-  color: #e94444;
+  color: #d62a2a;
   font-size: 10px;
-  font-weight: 500;
+  font-weight: 1000;
+  padding-top: 2px;
 }
