--- a/style/styles.css
+++ b/style/styles.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5%;
+  padding: 6%;
   background: #0062cc;
   /* box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19); */
 }
@@ -53,4 +53,10 @@ body {
   font-size: 10px;
   font-weight: 1000;
   padding-top: 2px;
+}
+label[for='inputEmail'] {
+  color: #fff;
+}
+label[for='inputPassword'] {
+  color: #fff;
 }
