--- a/style/styles.css
+++ b/style/styles.css
@@ -6,10 +6,6 @@
 body {
   background-color: #0062cc;
 }
-.login-value {
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
 .login-form {
   display: flex;
   flex-direction: column;
@@ -17,19 +13,10 @@ body {
   justify-content: center;
   padding: 6%;
   background: #0062cc;
-  /* box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19); */
 }
-.login-container form {
-  padding: 10%;
-}
-.login-form-2 .btnSubmit {
-  font-weight: 600;
-  color: #0062cc;
-  background-color: #fff;
-}
-.login-text {
+.sign-text {
   font-size: 60px;
-  font-weight: 400;
+  font-weight: 450;
   padding-bottom: 2%;
   color: #fff;
   text-align: center;
@@ -46,7 +33,7 @@ body {
 }
 .text-center {
   color: #fff;
-  padding: 5%;
+  padding: 3%;
 }
 #error-message {
   color: #d62a2a;
