--- a/style/styles.css
+++ b/style/styles.css
@@ -37,9 +37,11 @@ body {
 }
 #error-message {
   color: #d62a2a;
-  font-size: 10px;
-  font-weight: 1000;
-  padding-top: 2px;
+  font-size: 15px;
+  font-weight: 700;
+}
+.submit-error {
+  padding-top: 1px;
 }
 label[for='inputEmail'] {
   color: #fff;
