--- a/style/styles.css
+++ b/style/styles.css
@@ -3,6 +3,7 @@
 }
 body {
   background-color: #0062cc;
+  font-family: 'Open-sans', sans-serif;
 }
 .login-form {
   display: flex;
@@ -14,7 +15,7 @@ body {
 }
 .sign-text {
   font-size: 60px;
-  font-weight: 450;
+  font-weight: 600;
   padding-bottom: 2%;
   color: #fff;
   text-align: center;
