--- a/style/styles.css
+++ b/style/styles.css
@@ -15,6 +15,7 @@ body {
 }
 .sign-text {
   font-size: 60px;
+  font-family: sans-serif;
   font-weight: 600;
   padding-bottom: 2%;
   color: #fff;
@@ -34,13 +35,12 @@ body {
   color: #fff;
   padding: 3%;
 }
-#error-message {
+#error-messages {
+  padding-top: 3%;
+  padding-bottom: 10%;
   color: #f17d7d;
   font-size: 15px;
   font-weight: 600;
-}
-.submit-error {
-  padding-top: 1px;
 }
 .change-page-box {
   padding-top: 2px;
