--- a/style/styles.css
+++ b/style/styles.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box;
 }
+
+/* MAIN COMPONENTS */
+
 body {
   background-color: #0062cc;
   font-family: 'Open-sans', sans-serif;
@@ -22,6 +25,9 @@ body {
   text-align: center;
   margin-bottom: 10px;
 }
+
+/* BUTTONS */
+
 .btn-success {
   justify-content: center;
   align-items: center;
@@ -35,9 +41,9 @@ body {
   color: #fff;
   padding: 3%;
 }
-#error-messages {
-  padding-top: 3%;
-  padding-bottom: 10%;
+#spinner-error-box {
+  padding-top: 2%;
+  padding-bottom: 1%;
   color: #f17d7d;
   font-size: 15px;
   font-weight: 600;
@@ -45,6 +51,9 @@ body {
 .change-page-box {
   padding-top: 2px;
 }
+
+/* INPUTS */
+
 label[for='input-email'] {
   color: #fff;
 }
