--- a/style/styles.css
+++ b/style/styles.css
@@ -13,7 +13,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 6%;
+  padding-top: 6%;
+  padding-bottom: 1%;
   background: #0062cc;
 }
 .sign-text {
@@ -39,9 +40,9 @@ body {
 }
 .text-center {
   color: #fff;
-  padding: 3%;
+  padding: 1.5%;
 }
-#spinner-error-box {
+#error-box {
   padding-top: 2%;
   padding-bottom: 1%;
   color: #f17d7d;
